@@ -1,91 +1,88 @@
-
 <h1>Installing LilyPond</h1>
 <p>
-When we have whetted your appetite for LilyPond, then this is the
-right page. Click the download links for the platform of your choice,
-and go onto <a href="getting-started.html">Getting started</a>.
-
-<p>
+  When we have whetted your appetite for LilyPond, then this is the
+  right page. Click the download links for the platform of your choice,
+  and go onto <a href="getting-started.html">Getting started</a>.
+</p>
 
 <h2>Download LilyPond 1.8</h2>
 
 <table border="1">
 
-<tr>
-<th>Platform</th>
-<th>Version</th>
-<th>Go here</th>
-<th>LilyPond version</th>
-<th>Courtesy</th>
-</tr>
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th>LilyPond version</th>
+    <th>Courtesy</th>
+  </tr>
 
-
-
-
-<tr>
-
-  <td>
-  Debian/i386 
-  </td>
-  <td>
-  Sid
-  </td>
-  <td><b>Download
-  <a href="http://www.pedrokroeger.net/lilypond/lilypond1.7_1.7.29-1_i386.deb">
-lilypond</a>,
-  <a href="http://www.pedrokroeger.net/lilypond/lilypond1.7-doc_1.7.29-1_all.deb">documentation</a></b>
-  </td>
-   <td>1.7.29</td>  
-  <td>
-<a href="mailto:kroegerlistas@pedrokroeger.net">
-  Pedro Kroeger</a></td>
-</tr>
-
-<tr>
-  <td>
-  RedHat/i386 
-  </td>
-  <td>
-  9
-  </td>
-  <td><b>Download 
-  <a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.7.29-1.i386.rpm">lilypond</a>,
-
-  <a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.7.29-1.i386.rpm">documentation</a></b>
-  </td>
-   <td>1.7.29</td>  
-   <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
-</tr>
-
-<tr>
- <td>
-  Mandrake/i386 
-  </td>
-  <td>
-  9.1
-  </td>
-  <td>
-<b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
-    Thac's RPMs for mandrake</a></b>
-  </td>
-  <td>1.7.23</td>
-   <td>  Thac's RPMs for Mandrake</td>
-</tr>
-
-
-<tr>
-  <td>
-  MS Windows (Cygwin)
-  </td>
-  <td>
-  ?
-  </td>
-  <td>
-  <b>  Go <a href="windows/">here</a></b>
-  </td>
-   <td>1.7.27</td>
-   <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td> 
-</tr>
+  <tr>
+    <td>
+      Debian/i386 
+    </td>
+    <td>
+      Sid
+    </td>
+    <td><b>Download
+	<a href="http://www.pedrokroeger.net/lilypond/lilypond1.7_1.7.29-1_i386.deb">
+	  lilypond</a>,
+	<a href="http://www.pedrokroeger.net/lilypond/lilypond1.7-doc_1.7.29-1_all.deb">documentation</a></b>
+    </td>
+    <td>1.7.29</td>  
+    <td>
+      <a href="mailto:kroegerlistas@pedrokroeger.net">
+	Pedro Kroeger</a></td>
+  </tr>
+  
+  <tr>
+    <td>
+      RedHat/i386 
+    </td>
+    <td>
+      9
+    </td>
+    <td><b>Download 
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.7.29-1.i386.rpm">lilypond</a>,
+	
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.7.29-1.i386.rpm">documentation</a></b>
+    </td>
+    <td>1.7.29</td>  
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
+  </tr>
+  
+  <tr>
+    <td>
+      Mandrake/i386 
+    </td>
+    <td>
+      9.1
+    </td>
+    <td>
+      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
+	  Thac's RPMs for mandrake</a></b>
+    </td>
+    <td>1.7.23</td>
+    <td>Thac's RPMs for Mandrake</td>
+  </tr>
+  
+  <tr>
+    <td>
+      MS Windows (Cygwin)
+    </td>
+    <td>
+      Experimental/[test]
+    </td>
+    <td>
+      <b>See the <a href="windows/cygwin.html">Cygwin page</a></b>
+      or <a href="http://cygwin.com/setup.exe">install now!</a>
+    </td>
+    <td>1.7.29</td>
+    <td>
+      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
+    </td>
+  </tr>
 
 
 
@@ -96,134 +93,135 @@ lilypond</a>,
 
 <table border="1">
 
-<tr>
-<th>Platform</th>
-<th>Version</th>
-<th>Go here</th>
-<th>LilyPond version</th>
-<th>Courtesy</th>
-</tr>
+  <tr>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th>LilyPond version</th>
+    <th>Courtesy</th>
+  </tr>
 
 
-<tr>
-  <td>
-    Debian
+  <tr>
+    <td>
+      Debian
     </td>
-  <td>
-  Sid
-  </td>
-  <td>
-<b>apt-get install lilypond lilypond-doc</b>
-  </td>
-  <td>ask apt-get</td>
-  <td>Anthony Fok</td>
-</tr>
-
-
-<tr>
-  <td>
-    Debian/i386 
+    <td>
+      Sid
     </td>
-  <td>
-  Woody
-  </td>
-  <td>
-<b>Download
- <a
-href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">
-lilypond</a>,
- <a
-href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond-doc_1.6.9-1_i386.deb">
-documentation</a></b>
-  </td>
-  <td>1.6.9</td>
-  <td>Laura Conrad</td>
-</tr>
-
-  <td>
-  RedHat/i386 
-  </td>
-  <td>
-  7.2, 7.3, 8, 9
-  </td>
-  <td>
-<b>Go to <a
-href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-Planet CCRMA</a></b>
-  </td>
-  <td>1.6.11</td>
-  <td>PlanetCCRMA</td>
-</tr>
+    <td>
+      <b>apt-get install lilypond lilypond-doc</b>
+    </td>
+    <td>ask apt-get</td>
+    <td>Anthony Fok</td>
+  </tr>
 
 
-<tr>
-  <td>
-  Mandrake/i386 
-  </td>
-  <td>
-  9.0
-  </td>
-  <td>
-<b>Go to<a
-href="http://rpm.nyvalls.se/sound9.0.html">
-Thac's RPMs for mandrake</a></b>
-  </td>
-  <td>1.6.7</td>
-  <td>  Thac's RPMs for Mandrake</td>  
-</tr>
-
+  <tr>
+    <td>
+      Debian/i386 
+    </td>
+    <td>
+      Woody
+    </td>
+    <td>
+      <b>Download
+	<a
+	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">
+	  lilypond</a>,
+	<a
+	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond-doc_1.6.9-1_i386.deb">
+	  documentation</a></b>
+    </td>
+    <td>1.6.9</td>
+    <td>Laura Conrad</td>
+  </tr>
   
-<tr>
- <td>
-  SuSE/i586
-  </td>
-  <td>
-  8.2
-  </td>
-<td>
-<b>Download
-  <a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-1.6.6-67.i586.rpm">lilypond</a>,
-<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-documentation-1.6.6-67.i586.rpm">documentation</a></b>
-</td>
- <td>1.6.6</td>  
-<td>SuSE Gmbh.</td>
+  <tr>
+    <td>
+      RedHat/i386 
+    </td>
+    <td>
+      7.2, 7.3, 8, 9
+    </td>
+    <td>
+      <b>Go to <a
+		  href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+	  Planet CCRMA</a></b>
+    </td>
+    <td>1.6.11</td>
+    <td>PlanetCCRMA</td>
+  </tr>
   
-</tr>
+  
+  <tr>
+    <td>
+      Mandrake/i386 
+    </td>
+    <td>
+      9.0
+    </td>
+    <td>
+      <b>Go to<a
+		 href="http://rpm.nyvalls.se/sound9.0.html">
+	  Thac's RPMs for mandrake</a></b>
+    </td>
+    <td>1.6.7</td>
+    <td>  Thac's RPMs for Mandrake</td>  
+  </tr>
 
-<tr>
-  <td>
-  MS Windows (Cygwin)
-  </td>
-  <td>
-  ?
-  </td>
-  <td>
-  <b>  Go <a href="windows/">here</a></b>
-  </td>
-   <td>1.6.11</td>
-   <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td> 
-</tr>
 
-<tr>
-  <td>
-  MacOS X (Fink)
-  </td>
-  <td>
-  ?
-  </td>
-  <td>
-  <b>  Go <a href="macos.html">here</a></b>
-  </td>
-   <td>?</td>  
-   <td>?</td> 
-</tr>
+  <tr>
+    <td>
+      SuSE/i586
+    </td>
+    <td>
+      8.2
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-1.6.6-67.i586.rpm">lilypond</a>,
+	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-documentation-1.6.6-67.i586.rpm">documentation</a></b>
+    </td>
+    <td>1.6.6</td>  
+    <td>SuSE Gmbh.</td>
+  </tr>
+
+  <tr>
+    <td>
+      MS Windows (Cygwin)
+    </td>
+    <td>
+      Current/[curr]
+    </td>
+    <td>
+      <b>See the <a href="windows/cygwin.html">Cygwin page</a></b>
+      or <a href="http://cygwin.com/setup.exe">install now!</a>
+    </td>
+    <td>1.6.11</td>
+    <td>
+      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
+    </td> 
+  </tr>
+
+  <tr>
+    <td>
+      MacOS X (Fink)
+    </td>
+    <td>
+      ?
+    </td>
+    <td>
+      <b>  Go <a href="macos.html">here</a></b>
+    </td>
+    <td>?</td>  
+    <td>?</td> 
+  </tr>
 
 </table>
 
-  
+
 <p>
-If your platform is not listed, please consider to help out by
-<a href=../devel/packaging.html>packaging LilyPond</a>.
-
-
-  
+  If your platform is not listed, please consider to help out by
+  <a href=../devel/packaging.html>packaging LilyPond</a>.
+</p>
