@@ -1,3 +1,7 @@
+2003-07-31  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/index.html: Add Cygwin info; run indent.
+
 2003-07-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/index.html: Add Debian unstable/testing.
